# CrusaderBackend

./: CMakeLists.txt  UnitTestTools.cu  UnitTestTools.cuh  main.cu
archive/: Densenet-12-12  Densenet100  Resnet56  VGG
seann/: CodecRegistry.cuh  seann.cuh
seann/containers/: Block.cu  Block.cuh  NetParam.cu  NetParam.cuh  Sequential.cu  Sequential.cuh
seann/operands/: BatchNorm.cu  BatchNorm.cuh  Conv2D.cuh  Dropout.cu  Dropout.cuh  Linear.cu  Linear.cuh  MaxPool2D.cu  MaxPool2D.cuh  OperandBase.cu  OperandBase.cuh  ReLU.cu  ReLU.cuh  Softmax.cu  Softmax.cuh
seann/operands/controlling/: ChannelConcatenater.cu  ChannelConcatenater.cuh  Concatenater.cu  Concatenater.cuh  ShortcutEndpoint.cu  ShortcutEndpoint.cuh
seann/operands/cudnn/: cuConv2D.cu  cuConv2D.cuh
seann/operands/dylan/: BatchNorm.cu  BatchNorm.cuh  Conv2D.cuh  Dropout.cuh  Linear.cuh  MaxPool2D.cuh  ReLU.cu  ReLU.cuh  Softmax.cuh
seann/operands/prefabs/: DenseBlock.cu  DenseBlock.cuh
seann/operands/seblas/: AvgPool2D.cu  AvgPool2D.cuh  BatchNorm.cu  BatchNorm.cuh  Conv2D.cu  Conv2D.cuh  Dropout.cu  Dropout.cuh  Linear.cu  Linear.cuh  MaxPool2D.cu  MaxPool2D.cuh  ReLU.cu  ReLU.cuh  Softmax.cu  Softmax.cuh
seann/operands/seblas/activate/: LReLU.cu  LReLU.cuh  ReLU.cu  ReLU.cuh
seann/operands/seblas/pooling/: AvgPool2D.cu  AvgPool2D.cuh  GlobalAvgPool.cu  GlobalAvgPool.cuh  MaxPool2D.cu  MaxPool2D.cuh
seann/optimizers/: Optimizers.cu  Optimizers.cuh
seblas/assist/: CudaAssert.cu  CudaAssert.cuh  Inspections.cu  Inspections.cuh
seblas/operations/: cuActivation.cu  cuActivation.cuh  cuBatchNorm.cu  cuBatchNorm.cuh  cuConcat.cu  cuConcat.cuh  cuConv.cu  cuConv.cuh  cuDropout.cu  cuDropout.cuh  cuGEMM.cu  cuGEMM.cuh  cuLinear.cu  cuLinear.cuh  cuLoss.cu  cuLoss.cuh  cuOperations.cuh  cuOptim.cu  cuOptim.cuh  cuPool.cu  cuPool.cuh  cuReduce.cu  cuReduce.cuh
seblas/tensor/: Parameter.cu  Parameter.cuh  Tensor.cu  Tensor.cuh  TensorUtils.cu  TensorUtils.cuh
seio/data/: Data.cu  Data.cuh  DataAugmentor.cu  DataAugmentor.cuh  DataFetcher.cu  DataFetcher.cuh  DataLoader.cu  DataLoader.cuh  DataTransform.cu  DataTransform.cuh  Dataset.cu  Dataset.cuh
seio/fileParsers/: pugiconfig.cuh  pugixml.cu  pugixml.cuh
seio/logging/: Color.cu  Color.cuh  LogUtils.cu  LogUtils.cuh
seio/modelcache/: OperandCodecs.cu  OperandCodecs.cuh  codec.cu  codec.cuh
seio/watchDog/: TrainProcDisplay.cu  TrainProcDisplay.cuh
seutil/exec/: ThreadController.cu  ThreadController.cuh
validation/: UnitTestTools.cu  UnitTestTools.cuh
